@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-12T16:06:39Z",
-  "count_outdated" : 41,
-  "uniques_outdated" : 35,
-  "count" : 49,
-  "uniques" : 42,
+  "timestamp" : "2022-08-18T08:06:54Z",
+  "count_outdated" : 42,
+  "uniques_outdated" : 36,
+  "count" : 51,
+  "uniques" : 43,
   "clones" : [
-    {
-      "timestamp": "2022-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
@@ -25,6 +18,13 @@
       "count_minmax": [ 6, 6 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
