@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-08-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
@@ -16,6 +11,11 @@
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 6,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
