@@ -1,3 +1,10 @@
+2022-08-18T08:06:54Z:
+* notice: last 14d: unq all: 7 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 35 41 / 42 49
+* notice: next accum: outdated-unq outdated-all / unq all: 36 42 / 43 51
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-04] / [2022-08-18]
+
 2022-08-12T16:06:39Z:
 * notice: last 14d: unq all: 7 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 35 41 / 37 43
